manifests/charts/istio-control/istio-discovery/templates/grpc-logging.yaml
---

# solarmesh grpc-logging

apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: grpc-logging-inbound
  namespace: istio-system
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.http_connection_manager
        proxy:
          proxyVersion: ^1\.9.*
      patch:
        operation: INSERT_BEFORE
        value:
          config_discovery:
            config_source:
              ads: {}
              initial_fetch_timeout: 0s
            type_urls:
              - type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          name: istio.grpc-logging.inbound

---



apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: grpc-logging-config-inbound
  namespace: istio-system
spec:
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          name: istio.grpc-logging.inbound
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                configuration:
                  '@type': type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "logging_service": "networking-agent.service-mesh.svc.cluster.local:8888",
                      "is_inbound": "true",
                    }
                vm_config:
                  code:
                    # remote:
                    #   http_uri:
                    #     uri: http://release.solarmesh.cn/wasm/grpc_logging.wasm
                    local:
                      #  inline_string: envoy.wasm.grpx_logging
                      filename: /etc/istio/extensions/grpc_logging.wasm
                  runtime: envoy.wasm.runtime.v8
                  vm_id: grpc_logging_inbound
